# DualModalityRegistration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReadMe - DualModalityRegistration.docx
DualModalityRegistration/: CMakeLists.txt  DualModalityRegistration.py
DualModalityRegistration/Resources/UI/: DualModalityRegistration.ui
